--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Summary of my professional experience"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Saikiran S</title>
+    <link rel="shortcut icon" type="image/png" href="../src/assets/favicon-192x192.png">
+    <link rel="shortcut icon" sizes="192x192" href="../src/assets/favicon-192x192.png">
+    <link rel="apple-touch-icon" href="../src/assets/favicon-192x192.png">
+    <title>Saikiran</title>
     <style>
       * {
         font-family: 'Roboto', sans-serif;
