--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" type="image/png" href="../src/assets/favicon-192x192.png">
-    <link rel="shortcut icon" sizes="192x192" href="../src/assets/favicon-192x192.png">
-    <link rel="apple-touch-icon" href="../src/assets/favicon-192x192.png">
+    <link rel="shortcut icon" type="image/png" href="https://res.cloudinary.com/deks86ilr/image/upload/v1658508639/favicon-192x192_eifnnx.png">
+    <link rel="shortcut icon" sizes="192x192" href="https://res.cloudinary.com/deks86ilr/image/upload/v1658508639/favicon-192x192_eifnnx.png">
+    <link rel="apple-touch-icon" href="https://res.cloudinary.com/deks86ilr/image/upload/v1658508639/favicon-192x192_eifnnx.png">
     <title>Saikiran</title>
     <style>
       * {
